--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "fastify start server/plugin.js -l debug -P --port $PORT --a 0.0.0.0"
+    "start": "fastify start server/plugin.js -l debug -P --port $PORT -a 0.0.0.0"
   },
   "repository": {
     "type": "git",
