--- a/package.json
+++ b/package.json
@@ -19,7 +19,20 @@
   },
   "homepage": "https://github.com/Guryanov-Maksim/fullstack-javascript-project-lvl4#readme",
   "dependencies": {
+    "@fastify/static": "^6.5.0",
+    "@fastify/view": "^7.0.0",
+    "bootstrap": "^5.2.0",
     "fastify": "^4.3.0",
-    "fastify-cli": "^4.4.0"
+    "fastify-cli": "^4.4.0",
+    "fastify-plugin": "^4.0.0",
+    "fastify-reverse-routes": "^3.0.0",
+    "path-to-regexp": "^6.2.1",
+    "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "mini-css-extract-plugin": "^2.6.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
