--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "server/plugin.js",
   "type": "module",
   "scripts": {
+    "prebuild": "rm -rf dist",
+    "build": "NODE_ENV=production webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "fastify start server/plugin.js -l debug -P --port $PORT -a 0.0.0.0"
   },
