--- a/package.json
+++ b/package.json
@@ -21,16 +21,28 @@
   },
   "homepage": "https://github.com/Guryanov-Maksim/fullstack-javascript-project-lvl4#readme",
   "dependencies": {
+    "@fastify/flash": "^5.0.0",
+    "@fastify/formbody": "^7.0.1",
+    "@fastify/secure-session": "^5.2.0",
     "@fastify/static": "^6.5.0",
     "@fastify/view": "^7.0.0",
+    "ajv-formats": "^2.1.1",
     "bootstrap": "^5.2.0",
+    "dotenv": "^16.0.1",
     "fastify": "^4.3.0",
     "fastify-cli": "^4.4.0",
+    "fastify-objectionjs": "^1.0.0",
     "fastify-plugin": "^4.0.0",
     "fastify-reverse-routes": "^3.0.0",
     "i18next": "^21.9.0",
+    "knex": "^2.2.0",
+    "lodash": "^4.17.21",
+    "objection": "^3.0.1",
+    "objection-unique": "^1.2.2",
     "path-to-regexp": "^6.2.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "qs": "^6.11.0",
+    "sqlite3": "^5.0.11"
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
