--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@fastify/flash": "^5.0.0",
     "@fastify/formbody": "^7.0.1",
+    "@fastify/passport": "^2.2.0",
     "@fastify/secure-session": "^5.2.0",
     "@fastify/static": "^6.5.0",
     "@fastify/view": "^7.0.0",
@@ -31,6 +32,7 @@
     "dotenv": "^16.0.1",
     "fastify": "^4.3.0",
     "fastify-cli": "^4.4.0",
+    "fastify-method-override": "^1.5.9",
     "fastify-objectionjs": "^1.0.0",
     "fastify-plugin": "^4.0.0",
     "fastify-reverse-routes": "^3.0.0",
