--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,10 +2,13 @@ env:
   browser: true
   es2021: true
   node: true
+  jest/globals: true
 extends: 
   - 'eslint:recommended'
   - airbnb-base
 parserOptions:
   ecmaVersion: latest
   sourceType: module
+plugins:
+  - jest
 rules: {}
