fix: linter errors

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,4 +11,6 @@ parserOptions:
   sourceType: module
 plugins:
   - jest
-rules: {}
+rules:
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+  import/extensions: 0
