--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "rm -rf dist",
     "build": "NODE_ENV=production webpack --mode production",
     "test": "jest",
-    "start": "fastify start server/plugin.js -l debug -P --port $PORT -a 0.0.0.0"
+    "start": "fastify start server/plugin.js -l debug -P -o --port $PORT -a 0.0.0.0"
   },
   "jest": {
     "modulePathIgnorePatterns": [
